Stabilny kalkulator InputString - dodanie funkcji clear bo nie dało się wyczyścić MainActivity - dodanie czyszczenia inputu po akcjach oraz funkcja do ustawiania textu dla TextView RPNCalculator - poprawy błędnych warunków na długość stringów oraz Testy i Layout

--- a/Calculator/app/src/main/res/layout/content_main.xml
+++ b/Calculator/app/src/main/res/layout/content_main.xml
@@ -6,48 +6,59 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.grzegorz.calculator.MainActivity"
+    tools:layout_editor_absoluteY="81dp"
     tools:showIn="@layout/activity_main">
 
     <android.support.design.widget.CoordinatorLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:id="@+id/coordinatorLayout5"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="197dp"
             android:orientation="vertical">
 
             <TextView
                 android:id="@+id/thirdElementTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="TextView" />
+                android:text="" />
 
             <TextView
                 android:id="@+id/secondElementTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="TextView" />
+                android:text="" />
 
             <TextView
                 android:id="@+id/firstElementTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="TextView" />
+                android:text="" />
 
             <TextView
                 android:id="@+id/inputTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="TextView" />
+                android:text=""
+                android:background="#E06E1E" />
         </LinearLayout>
     </android.support.design.widget.CoordinatorLayout>
 
     <android.support.design.widget.CoordinatorLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="185dp">
+        android:id="@+id/coordinatorLayout6"
+        android:layout_width="0dp"
+        android:layout_height="420dp"
+        android:layout_marginTop="152dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -57,21 +68,22 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="horizontal"
-                >
+                android:orientation="horizontal">
 
                 <Button
                     android:id="@+id/oneButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="1" />
+                    android:onClick="onOneClick"
+                    android:text="1"/>
 
                 <Button
                     android:id="@+id/twoButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:onClick="onTwoClick"
                     android:text="2" />
 
                 <Button
@@ -79,6 +91,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:onClick="onThreeClick"
                     android:text="3" />
 
                 <Button
@@ -86,6 +99,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:onClick="onSumClick"
                     android:text="+" />
             </LinearLayout>
 
@@ -99,6 +113,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:onClick="onFourClick"
                     android:text="4" />
 
                 <Button
@@ -106,6 +121,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:onClick="onFiveClick"
                     android:text="5" />
 
                 <Button
@@ -113,6 +129,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:onClick="onSixClick"
                     android:text="6" />
 
                 <Button
@@ -120,6 +137,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:onClick="onDifferenceClick"
                     android:text="-" />
             </LinearLayout>
 
@@ -133,6 +151,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:onClick="onSevenClick"
                     android:text="7" />
 
                 <Button
@@ -140,6 +159,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:onClick="onEightClick"
                     android:text="8" />
 
                 <Button
@@ -147,6 +167,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:onClick="onNineClick"
                     android:text="9" />
 
                 <Button
@@ -154,6 +175,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:onClick="onMultiplyClick"
                     android:text="*" />
             </LinearLayout>
 
@@ -163,17 +185,19 @@
                 android:orientation="horizontal">
 
                 <Button
-                    android:id="@+id/divideButton"
+                    android:id="@+id/zeroButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="/" />
+                    android:onClick="onZeroClick"
+                    android:text="0" />
 
                 <Button
                     android:id="@+id/sqrtButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:onClick="onSqrtClick"
                     android:text="sqrt" />
 
                 <Button
@@ -181,6 +205,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:onClick="onPowClick"
                     android:text="y^x" />
 
                 <Button
@@ -188,6 +213,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:onClick="onCommaClick"
                     android:text="." />
             </LinearLayout>
 
@@ -201,6 +227,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:onClick="onDropClick"
                     android:text="drop" />
 
                 <Button
@@ -208,6 +235,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:onClick="onSwapClick"
                     android:text="swap" />
 
                 <Button
@@ -215,6 +243,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:onClick="onEnterClick"
                     android:text="enter" />
 
                 <Button
@@ -222,7 +251,44 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:onClick="onClearAllClick"
                     android:text="ac" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/divideButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:onClick="onDivideClick"
+                    android:text="/" />
+
+                <Button
+                    android:id="@+id/eraseButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:onClick="onEraseClick"
+                    android:text="erase" />
+
+                <Button
+                    android:id="@+id/tempButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="tmp" />
+
+                <Button
+                    android:id="@+id/tempButton2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="tmp" />
             </LinearLayout>
         </LinearLayout>
     </android.support.design.widget.CoordinatorLayout>
