--- a/Calculator/app/src/main/res/layout/content_main.xml
+++ b/Calculator/app/src/main/res/layout/content_main.xml
@@ -53,7 +53,7 @@
     </android.support.design.widget.CoordinatorLayout>
 
     <android.support.design.widget.CoordinatorLayout
-        android:id="@+id/coordinatorLayout6"
+        android:id="@+id/buttonsLayout"
         android:layout_width="0dp"
         android:layout_height="420dp"
         android:layout_marginTop="152dp"
@@ -119,7 +119,7 @@
                     android:text="4" />
 
                 <Button
-                    android:id="@+id/fiveButon"
+                    android:id="@+id/fiveButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -135,7 +135,7 @@
                     android:text="6" />
 
                 <Button
-                    android:id="@+id/diffrenceButton"
+                    android:id="@+id/differenceButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -233,7 +233,7 @@
                     android:text="drop" />
 
                 <Button
-                    android:id="@+id/swapButon"
+                    android:id="@+id/swapButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
