--- a/Calculator/app/src/main/res/menu/menu_main.xml
+++ b/Calculator/app/src/main/res/menu/menu_main.xml
@@ -4,7 +4,10 @@
     tools:context="com.example.grzegorz.calculator.MainActivity">
     <item
         android:id="@+id/action_settings"
+        android:checkable="false"
+        android:enabled="true"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
+        android:title="Ustawienia"
+        android:visible="true"
         app:showAsAction="never" />
 </menu>
