Pobieranie z bazy listy projektów

--- a/Klocki/app/src/main/res/layout/content_main.xml
+++ b/Klocki/app/src/main/res/layout/content_main.xml
@@ -4,30 +4,55 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:onClick="onlyActiveCheckBoxClicked"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".MainActivity"
+    tools:layout_editor_absoluteY="81dp"
     tools:showIn="@layout/activity_main">
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/addNewProjectButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="58dp"
-        android:layout_marginStart="58dp"
-        android:layout_marginTop="80dp"
+        android:layout_marginBottom="20dp"
+        android:layout_marginLeft="78dp"
+        android:layout_marginStart="78dp"
+        android:layout_marginTop="16dp"
         android:onClick="addNewProjectButtonClick"
         android:text="Dodaj nowy projekt"
+        app:layout_constraintBottom_toTopOf="@+id/onlyActiveCheckBox"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <CheckBox
+        android:id="@+id/onlyActiveCheckBox"
+        android:layout_width="0dp"
+        android:layout_height="38dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginStart="8dp"
+        android:checked="true"
+        android:onClick="onlyActiveCheckBoxClicked"
+        android:text="Tylko aktywne"
+        app:layout_constraintBottom_toTopOf="@+id/InventoriesListView"
+        app:layout_constraintEnd_toEndOf="@+id/addNewProjectButton"
+        app:layout_constraintStart_toStartOf="@+id/InventoriesListView"
+        app:layout_constraintTop_toBottomOf="@+id/addNewProjectButton" />
+
+    <ListView
+        android:id="@+id/InventoriesListView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/onlyActiveCheckBox" />
 
 </android.support.constraint.ConstraintLayout>
