--- a/Klocki/app/src/main/res/layout/activity_inventory.xml
+++ b/Klocki/app/src/main/res/layout/activity_inventory.xml
@@ -14,6 +14,7 @@
         android:layout_marginEnd="26dp"
         android:layout_marginRight="26dp"
         android:layout_marginTop="9dp"
+        android:onClick="confirmButtonClick"
         android:text="Zatwierdź"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/activeCheckBox"
