--- a/Klocki/app/src/main/res/layout/activity_inventory.xml
+++ b/Klocki/app/src/main/res/layout/activity_inventory.xml
@@ -73,6 +73,7 @@
         android:layout_marginEnd="24dp"
         android:layout_marginRight="24dp"
         android:layout_marginTop="16dp"
+        android:onClick="exportButtonClick"
         android:text="Eksportuj"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/nameTextView"
