--- a/Klocki/app/src/main/res/layout/inventory_part_row.xml
+++ b/Klocki/app/src/main/res/layout/inventory_part_row.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
     <TextView
         android:id="@+id/list_item_string"
-        android:layout_width="wrap_content"
+        android:layout_width="153dp"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_alignParentLeft="true"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/imageView"
+        android:layout_marginEnd="30dp"
         android:paddingLeft="8dp"
         android:textSize="18sp"
         android:textStyle="bold" />
@@ -17,9 +19,9 @@
         android:id="@+id/incrementCounter"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
-        android:layout_marginRight="5dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="11dp"
         android:maxWidth="15dp"
         android:text="+" />
 
@@ -27,10 +29,19 @@
         android:id="@+id/decrementCounter"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toLeftOf="@id/incrementCounter"
-        android:layout_centerVertical="true"
-        android:layout_marginRight="5dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignTop="@+id/incrementCounter"
+        android:layout_marginEnd="103dp"
         android:maxWidth="15dp"
         android:text="-" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="116dp"
+        android:layout_height="66dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignTop="@+id/incrementCounter"
+        android:layout_marginStart="13dp"
+        app:srcCompat="?attr/dividerHorizontal" />
 
 </RelativeLayout>
